[gd_scene load_steps=7 format=3 uid="uid://7hl5xetvytdm"]

[ext_resource type="Script" uid="uid://5jfoky3jxqrk" path="res://addons/godot-xr-tools/objects/interactable_area.gd" id="1_7f2qu"]
[ext_resource type="Script" uid="uid://oyrm2dbnfi33" path="res://Objects/GDScript/change_scene_object.gd" id="1_vlhxd"]
[ext_resource type="PackedScene" uid="uid://ct0f401tw10ye" path="res://Objects/Scenes/base_objects/mini_serre.tscn" id="3_nih1p"]

[sub_resource type="SphereShape3D" id="SphereShape3D_vlhxd"]
radius = 1.99548

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_vlhxd"]

[sub_resource type="SphereShape3D" id="SphereShape3D_fme1p"]
radius = 0.236853

[node name="ChangeSceneSerre" type="Node3D"]
script = ExtResource("1_vlhxd")

[node name="XRToolsInteractableArea" type="Area3D" parent="."]
script = ExtResource("1_7f2qu")
action_name = "change Scene"
metadata/_custom_type_script = "uid://5jfoky3jxqrk"

[node name="CollisionShape3D" type="CollisionShape3D" parent="XRToolsInteractableArea"]
shape = SubResource("SphereShape3D_vlhxd")

[node name="Serre" parent="." instance=ExtResource("3_nih1p")]

[node name="StaticBody3D" type="StaticBody3D" parent="Serre"]
transform = Transform3D(20, 0, 0, 0, 20, 0, 0, 0, 20, 0, 0, 0)
physics_material_override = SubResource("PhysicsMaterial_vlhxd")

[node name="CollisionShape3D" type="CollisionShape3D" parent="Serre/StaticBody3D"]
shape = SubResource("SphereShape3D_fme1p")
